--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/font": "^13.5.2",
     "autoprefixer": "10.4.15",
     "lucide-react": "^0.279.0",
     "next": "13.4.19",
