--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@next/font": "^13.5.2",
     "autoprefixer": "10.4.15",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.279.0",
     "next": "13.4.19",
     "postcss": "8.4.29",
